# general_cv

./: pyproject.toml
image/detection/: i.csv  zidane.csv
src/: classification.py  detection.py  segmentation.py
